Name:               hscheme
Version:            0.1
Synopsis:           Simple Scheme interpreter written in Haskell
Description:        Simple Scheme interpreter written in Haskell
License:            GPL
Author:             Mats Klingberg
Maintainer:         Mats Klingberg <maklingberg@gmail.com>
Build-Depends:      base, mtl, parsec
Build-Type:         Simple

Executable:         hscheme
Main-is:            Main.hs
